# rust-trading-system

./: .gitignore  Cargo.toml
scripts/: run_tests.sh
src/: lib.rs  main.rs
src/market_data/: binance.rs  mod.rs  stream.rs  types.rs
src/orders/: mod.rs
src/portfolio/: mod.rs
src/strategies/: mod.rs
src/trading/: client.rs  mod.rs  types.rs
tests/: integration_tests.sh  property_tests.sh  real_testnet_tests.rs
