[package]
name = "rust-trading-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"