[package]
name = "rust-trading-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
dotenv = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
mockall = "0.12"
wiremock = "0.6"
tempfile = "3.0"